Implemented move functional. Added delete button.

--- a/popup.html
+++ b/popup.html
@@ -94,6 +94,7 @@
                                     <input type="button" value="Copy" id="copyBtn" class="control-input" disabled="disabled" />
                                     <input type="button" value="Move" id="moveBtn" class="control-input" disabled="disabled" />
                                     <input type="button" value="Rename" id="renameBtn" class="control-input" disabled="disabled" />
+                                    <input type="button" value="Delete" id="deleteBtn" class="control-input" disabled="disabled" />
                                     <iframe id="downloadFile" style="display:none"></iframe>
                                 </td>
                             </tr>
