Implemented file upload functional.

--- a/popup.html
+++ b/popup.html
@@ -127,7 +127,15 @@
 			                                    <label for="uploadPath">Ented path</label>
 			                                </td>
 			                                <td class="right-td">
-			                                    <input type="text" id="uploadPath" />
+			                                    <input type="text" id="uploadPath" class="default-text" title="dirName/dirName/" />
+			                                </td>
+			                            </tr>
+			                            <tr>
+			                                <td class="left-td">
+			                                    <label for="fileDescr">Description</label>
+			                                </td>
+			                                <td class="right-td">
+			                                    <textarea rows="3" cols="45" id="fileDescr" class="default-text" title="Some description"></textarea>
 			                                </td>
 			                            </tr>
 			                            <tr>
