Implemented refresh functional.

--- a/popup.html
+++ b/popup.html
@@ -96,6 +96,7 @@
                                     <input type="button" value="Rename" id="renameBtn" class="control-input" disabled="disabled" />
                                     <input type="button" value="Delete" id="deleteBtn" class="control-input" disabled="disabled" />
                                     <input type="button" value="Embed" id="embedBtn" class="control-input" disabled="disabled" />
+                                    <input type="button" value="Refresh" id="refreshBtn" class="control-input" />
                                     <iframe id="downloadFile" style="display:none"></iframe>
                                 </td>
                             </tr>
