Updated README file. Removed hardcoded data

--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
                                 <label for="clientId">Client ID:</label>
                             </td>
                             <td class="right-td">
-                                <input type="text" name="clientId" id="clientId" value="5baf8f59c1ab4641" />
+                                <input type="text" name="clientId" id="clientId" value="" />
                             </td>
                         </tr>
                         <tr>
@@ -25,7 +25,7 @@
                                 <label for="privateKey">Private Key:</label>
                             </td>
                             <td class="right-td">
-                                <input type="text" name="privateKey" id="privateKey" value="18fa3edfa1f16f1d4ecfa798d3bb34da" />
+                                <input type="text" name="privateKey" id="privateKey" value="" />
                             </td>
                         </tr>
                         <tr>
